--- a/ALLProject/pos/templates/pos/view_history.html
+++ b/ALLProject/pos/templates/pos/view_history.html
@@ -1,194 +1,193 @@
-{% extends "inventory/base.html" %}
+<!DOCTYPE html>
 {% load static %}
-
-{% block head %}
+<html>
     <link rel = "stylesheet" href="{% static 'css/view_history.css' %}">
-    <script src="{% static 'js/history.js'%}"></script>
-{% endblock%}
-
-{% block content %}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta+Mahee:wght@200;300;400;500;600;700;800&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
- 
-    <div id="main-content">
-        <div id="dashboard">
-            <h1>Sales</h1>
-            <div class="filter-bar">
-                <div class="filter-option" id="date-filter-selection">
-                    <h3 class="filter-title" id="date-filter-title">Past 100 Days</h3>
-                    <img src="{% static 'images/arrow-down.png' %}" class="logo dropdown">
-                </div>
+    <script src="{% static 'js/history.js'%}"></script>
 
-                <div class="filter-option" id="payment-filter-selection">
-                    <h3 class="filter-title"> Filter </h3>
-                    <img src="{% static 'images/adjust.png'%}" class="logo filter">
-                </div>
-            </div>
 
-                <div class="filter-date-box">
-                <div class="filter-date fixed">
-                    <button type="button" onclick="filter_by_date('today')"> Today </button>
-                    <button type="button" onclick="filter_by_date('week')"> Last 7 days </button>
-                    <button type="button" onclick="filter_by_date('month')"> This Month </button>
-                </div>
-                <div class="filter-date custom">
-                    <h4>Custom Date Range</h4>
-                    <div style="display: flex;justify-content: space-evenly;align-items: center; width: 100%; height: 70%;">
-                        <input type="date" class="filter-date choice" id="start-date"></input>
-                        <span class="filter-date middle"> - </span>
-                        <input type="date" class="filter-date choice" id="end-date"> </input>
+    <body>
+        <div id="main-content">
+            <div id="dashboard">
+                <h1>Sales</h1>
+                <div class="filter-bar">
+                    <div class="filter-option" id="date-filter-selection">
+                        <h3 class="filter-title" id="date-filter-title">Past 100 Days</h3>
+                        <img src="{% static 'images/arrow-down.png' %}" class="logo dropdown">
+                    </div>
+
+                    <div class="filter-option" id="payment-filter-selection">
+                        <h3 class="filter-title"> Filter </h3>
+                        <img src="{% static 'images/adjust.png'%}" class="logo filter">
                     </div>
                 </div>
-            </div>
-            <div class="filter-payment-box">
-                <button type="button" onclick="filter_payment('Credit Card')">Credit Card</button>
-                <button type="button" onclick="filter_payment('Debit Card')">Debit Card</button>
-                <button type="button" onclick="filter_payment('DuitNow')">DuitNow</button>
-                <button type="button" onclick="filter_payment('Cash')">Cash</button>
-                <button type="button" onclick="filter_payment('Others')">Others</button>
-            </div>
 
-            {% comment %} <div class="filter">
-                <div class="filter date" id="date-filter-selection">
-                    <h3 id="filter-title">20 APRIL 2025 - 20 MAY 2025</h3>
-                    <img src="{% static 'images/arrow-down.png' %}" class="logo dropdown">
-                </div>
-                <div class="filter-date-box">
+                 <div class="filter-date-box">
                     <div class="filter-date fixed">
-                        <button type="button" class="filter-date today"> Today </button>
-                        <button type="button" class="filter-date last7days"> Last 7 days </button>
-                        <button type="button" class="filter-date thisMth"> This Month </button>
+                        <button type="button" onclick="filter_by_date('today')"> Today </button>
+                        <button type="button" onclick="filter_by_date('week')"> Last 7 days </button>
+                        <button type="button" onclick="filter_by_date('month')"> This Month </button>
                     </div>
                     <div class="filter-date custom">
                         <h4>Custom Date Range</h4>
                         <div style="display: flex;justify-content: space-evenly;align-items: center; width: 100%; height: 70%;">
-                            <input type="text" class="filter-date choice" placeholder="Start Date"></input>
+                            <input type="date" class="filter-date choice" id="start-date"></input>
                             <span class="filter-date middle"> - </span>
-                            <input type="text" class="filter-date choice" placeholder="End Date"> </input>
+                            <input type="date" class="filter-date choice" id="end-date"> </input>
                         </div>
                     </div>
                 </div>
-                <div class="filter payment-type" id="payment-filter-selection">
-                    <h3 id="filter-title"> Filter </h3>
-                    <img src="{% static 'images/adjust.png'%}" class="logo filter">
-                </div>
                 <div class="filter-payment-box">
-                    <ul>
-                        <button type="button" class="filter-payment">Credit Card</button>
-                        <button type="button" class="filter-payment">Debit Card</button>
-                        <button type="button" class="filter-payment">DuitNow</button>
-                        <button type="button" class="filter-payment">Cash</button>
-                        <button type="button" class="filter-payment">Others</button>
-                    </ul>
+                    <button type="button" onclick="filter_payment('Credit Card')">Credit Card</button>
+                    <button type="button" onclick="filter_payment('Debit Card')">Debit Card</button>
+                    <button type="button" onclick="filter_payment('DuitNow')">DuitNow</button>
+                    <button type="button" onclick="filter_payment('Cash')">Cash</button>
+                    <button type="button" onclick="filter_payment('Others')">Others</button>
                 </div>
-            </div> {% endcomment %}
-        </div>
-        
-        <div class="history" id="history-list">
-            {% include 'partials/history_partial.html' %}
-        </div>
 
-        <div class="transact-detail">
-            <button type="button" id="close-box"><img src="{% static 'images/back-arrow.png'%}" alt="back-arrow" id="close"></button>
-            <div class="container">
-                <h3>Created on 21 April 2025</h3>
-                <h3>Receipt Number: 100024000</h3>
-                <button type="button" id="print">Print</button>
-                <div class="content-detail">
-                    <div class="box header">
-                        <h3 class="header">Item Code</h3>
-                        <h3 class="header">Product Name</h3>
-                        <h3 class="header2">Unit Price</h3>
+                {% comment %} <div class="filter">
+                    <div class="filter date" id="date-filter-selection">
+                        <h3 id="filter-title">20 APRIL 2025 - 20 MAY 2025</h3>
+                        <img src="{% static 'images/arrow-down.png' %}" class="logo dropdown">
                     </div>
-                    <div class="box item">
-                        <h4 class="item">Code</h4>
-                        <h4 class="item">Product Name</h4>
-                        <h4 class="item2">Price</h4>
+                    <div class="filter-date-box">
+                        <div class="filter-date fixed">
+                            <button type="button" class="filter-date today"> Today </button>
+                            <button type="button" class="filter-date last7days"> Last 7 days </button>
+                            <button type="button" class="filter-date thisMth"> This Month </button>
+                        </div>
+                        <div class="filter-date custom">
+                            <h4>Custom Date Range</h4>
+                            <div style="display: flex;justify-content: space-evenly;align-items: center; width: 100%; height: 70%;">
+                                <input type="text" class="filter-date choice" placeholder="Start Date"></input>
+                                <span class="filter-date middle"> - </span>
+                                <input type="text" class="filter-date choice" placeholder="End Date"> </input>
+                            </div>
+                        </div>
                     </div>
-                    <div class="box item">
-                        <h4 class="item">Code</h4>
-                        <h4 class="item">Product Name</h4>
-                        <h4 class="item2">Price</h4>
+                    <div class="filter payment-type" id="payment-filter-selection">
+                        <h3 id="filter-title"> Filter </h3>
+                        <img src="{% static 'images/adjust.png'%}" class="logo filter">
                     </div>
-                    <div class="box item">
-                        <h4 class="item">Code</h4>
-                        <h4 class="item">Product Name</h4>
-                        <h4 class="item2">Price</h4>
+                    <div class="filter-payment-box">
+                        <ul>
+                            <button type="button" class="filter-payment">Credit Card</button>
+                            <button type="button" class="filter-payment">Debit Card</button>
+                            <button type="button" class="filter-payment">DuitNow</button>
+                            <button type="button" class="filter-payment">Cash</button>
+                            <button type="button" class="filter-payment">Others</button>
+                        </ul>
                     </div>
-                    <div class="box item">
-                        <h4 class="item">Code</h4>
-                        <h4 class="item">Product Name</h4>
-                        <h4 class="item2">Price</h4>
+                </div> {% endcomment %}
+            </div>
+            
+            <div class="history" id="history-list">
+                {% include 'partials/history_partial.html' %}
+            </div>
+
+            <div class="transact-detail">
+                <button type="button" id="close-box"><img src="{% static 'images/back-arrow.png'%}" alt="back-arrow" id="close"></button>
+                <div class="container">
+                    <h3>Created on 21 April 2025</h3>
+                    <h3>Receipt Number: 100024000</h3>
+                    <button type="button" id="print">Print</button>
+                    <div class="content-detail">
+                        <div class="box header">
+                            <h3 class="header">Item Code</h3>
+                            <h3 class="header">Product Name</h3>
+                            <h3 class="header2">Unit Price</h3>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
                     </div>
-                    <div class="box item">
-                        <h4 class="item">Code</h4>
-                        <h4 class="item">Product Name</h4>
-                        <h4 class="item2">Price</h4>
+                    <div class="included-box">
+                        <div class="included box subtotal">
+                            <h3 class="included title">SUB-TOTAL</h3>
+                            <h3 class="included value">105.32</h3>
+                        </div>
+                        <div class="included box discount">
+                            <h3 class="included title">Discount</h3>
+                            <h3 class="included value">-5.66</h3>
+                        </div>
+                        <div class="included box tax">
+                            <h3 class="included title">Tax</h3>
+                            <h3 class="included value">2.56</h3>
+                        </div>
                     </div>
-                    <div class="box item">
-                        <h4 class="item">Code</h4>
-                        <h4 class="item">Product Name</h4>
-                        <h4 class="item2">Price</h4>
-                    </div>
-                    <div class="box item">
-                        <h4 class="item">Code</h4>
-                        <h4 class="item">Product Name</h4>
-                        <h4 class="item2">Price</h4>
-                    </div>
-                    <div class="box item">
-                        <h4 class="item">Code</h4>
-                        <h4 class="item">Product Name</h4>
-                        <h4 class="item2">Price</h4>
-                    </div>
-                    <div class="box item">
-                        <h4 class="item">Code</h4>
-                        <h4 class="item">Product Name</h4>
-                        <h4 class="item2">Price</h4>
-                    </div>
-                    <div class="box item">
-                        <h4 class="item">Code</h4>
-                        <h4 class="item">Product Name</h4>
-                        <h4 class="item2">Price</h4>
-                    </div>
-                    <div class="box item">
-                        <h4 class="item">Code</h4>
-                        <h4 class="item">Product Name</h4>
-                        <h4 class="item2">Price</h4>
-                    </div>
-                </div>
-                <div class="included-box">
-                    <div class="included box subtotal">
-                        <h3 class="included title">SUB-TOTAL</h3>
-                        <h3 class="included value">105.32</h3>
-                    </div>
-                    <div class="included box discount">
-                        <h3 class="included title">Discount</h3>
-                        <h3 class="included value">-5.66</h3>
-                    </div>
-                    <div class="included box tax">
-                        <h3 class="included title">Tax</h3>
-                        <h3 class="included value">2.56</h3>
-                    </div>
-                </div>
-                <div class="final-box">
-                    <div class="final box totalpay">
-                        <h3 class="final title">TOTAL TO PAY</h3>
-                        <h3 class="final value">105.32</h3>
-                    </div>
-                    <div class="final box payment-type">
-                        <h3 class="final title">CASH</h3>
-                        <h3 class="final value">108.00</h3>
-                    </div>
-                    <!-- <div class="final box accNo">
-                        <h5 class="final title">5112111314</h5>
-                    </div> -->
-                    <div class="final box change">
-                        <h3 class="final title">CHANGE DUE</h3>
-                        <h3 class="final value">2.68</h3>
+                    <div class="final-box">
+                        <div class="final box totalpay">
+                            <h3 class="final title">TOTAL TO PAY</h3>
+                            <h3 class="final value">105.32</h3>
+                        </div>
+                        <div class="final box payment-type">
+                            <h3 class="final title">CASH</h3>
+                            <h3 class="final value">108.00</h3>
+                        </div>
+                        <!-- <div class="final box accNo">
+                            <h5 class="final title">5112111314</h5>
+                        </div> -->
+                        <div class="final box change">
+                            <h3 class="final title">CHANGE DUE</h3>
+                            <h3 class="final value">2.68</h3>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-{%endblock%}
+    </body>
+</html>
