--- a/ALLProject/pos/static/css/sales_page.css
+++ b/ALLProject/pos/static/css/sales_page.css
@@ -107,7 +107,7 @@ h2,h3{
 #enterQuantity {
     text-align: -webkit-center;
 }
-#quantity {
+#quantity-input {
     display: inherit;
     width: 60%;
     height: 5vh;
@@ -166,4 +166,18 @@ h2,h3{
     width: 65%;
     background-color: #FFF;
     box-shadow: -2px 2px 8px 0px rgba(0, 0, 0, 0.3);
+}
+
+#scanner-div {
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 100%;
 }
