--- a/ALLProject/pos/static/css/sales_cart.css
+++ b/ALLProject/pos/static/css/sales_cart.css
@@ -11,6 +11,10 @@
     width: 90%;
     height: 62%;
     vertical-align: middle;
+    
+    font-family: "Mukta Mahee", sans-serif;
+    font-weight: 600;
+    font-style: normal;
     text-align: center;
 }
 
