--- a/ALLProject/reports/templates/reports/sales.html
+++ b/ALLProject/reports/templates/reports/sales.html
@@ -1,4 +1,4 @@
-{% extends "reports/navigation.html" %}
+{% extends "users/navigation.html" %}
 {% load static %}
 {% block dashboard %}
     <link rel = "stylesheet" href="{% static 'css/sales.css' %}">
