--- a/ALLProject/static/css/cashier/navigation.css
+++ b/ALLProject/static/css/cashier/navigation.css
@@ -7,20 +7,21 @@ body html {
     justify-content: center;
     text-align: center;
     
-    position: absolute;
+    position: fixed ;
     overflow: hidden;
 
     width: 3.5em;
-    height: 11em;
+    height: 12em;
     top: 37%;
     left: 1%;
-    z-index: 3;
+    z-index: 2;
 
     border-radius: 30px;
-    background-color: #CBD4C2;
+    background-color: #B3BFB4;
 }
 
 .nav {
+    text-decoration: none;
     position: relative;
     width: 2em;
     height: 2em;
@@ -28,25 +29,19 @@ body html {
     left: -3.9em;
 }
 
-.logo {
+.nav-logo {
     width: 2em;
     height: 2em;
     filter: drop-shadow(4em 0 0px #FFFFFF);
 }
 
-p {
-    margin: 0;
-    top: -1.5em;
-    left: 6.5em;
-    position: relative;
-}
-
 .navfull {
     position: relative;
-    padding-left: 6.8em;
     padding-right: 6em;
     padding-bottom: 0.5em;
-    left: 0;
+    margin: 0;
+    top: -1.7em;
+    left: 6.5em;
     visibility: hidden;
 
     font-family: "Mukta Mahee", sans-serif;
@@ -56,41 +51,10 @@ p {
     color: #FFFFFF;
 }
 
-/* Change .sale for different pages */
-.logo.sale {
-    width: 2.5em;
-    height: 2.5em;
-    filter: drop-shadow(4em 0 0px #523249);
-}
-
-.nav.sale {
-    left: -4.2em;
-}
-
-.navfull.sale {
-    font-size: large;
-    padding-left: 6.2em;
-    color: #523249;
-}
-
 /* Animation */
-#navcolumn:hover {
-    overflow: hidden;
-    width: 8em;
-    .navfull {
-        visibility: visible;
-    }
-    .nav {
-        left: -6.1em;
-    }
-    .nav.sale {
-        left: -6.2em;
-    }
-}
-
 a:hover {
-    .logo{
-        filter: drop-shadow(4em 0 0px #e0ffab);
+    .nav-logo{
+        filter: drop-shadow(4em 0 0px #815355);
     }
     .navfull {
         color: #000;
