--- a/ALLProject/static/css/home.css
+++ b/ALLProject/static/css/home.css
@@ -47,11 +47,12 @@ p {
 }
 
 .logo-container {
-    width: 50vw;
+    width: 40vw;
     height: 90vh;
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    z-index: 1;
 }
 
 #main-logo {
@@ -59,69 +60,91 @@ p {
     height: auto;
 }
 
-.large-container {
-    width: 50vw;
-    height: 90vh;
-}
-
-.option-container {
+/* Slider styles for options */
+#slider-container {
+    position: absolute;
     width: 100%;
+    height: 90%;
+    overflow: hidden;
+    background-image: linear-gradient(to right, #C3B29933 , #654C5E);
+}
+.slider {
+    position: relative;
+    float: right;
+
+    width: 55%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    overflow-y: scroll;
 }
 
-.option {
-    background-color: white;
-    border-radius: 2vw;
-    width: 33vw;
-    /* height: 25vh; */
-    aspect-ratio: 3 / 1;
-    height: auto;
-    margin-bottom: 5vh;
-    flex-shrink: 0;
-    display: flex;
-}
-
-.right-side {
-    width: 20vw;
-    padding-bottom: 2vh;
-}
-
-.left-side {
-    width: 12vw;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.left-side img{
-    width: 7vw;
-    height: auto;
-}
-
-#first-item {
-    margin-top: 8vh;
-}
-
-.text {
-    margin-top: 2vh;
+.images {
+    position: absolute;
+    --rotate: 0deg;
+    bottom: 0;
+    right: -50%;
+    rotate: 0deg;
     width: 80%;
+    height: 100%;
+    border-radius: 50%;
+    transform: translate(-20%, 40%) rotate(var(--rotate));
+    transition: transform 0.5s ease-in-out;
+    outline: 3px dashed #fff5;
+    outline-offset: -100px;
+}
+.images .item {
+    position: absolute;
+    width: 20vw;
+    height: 20vw;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 50%;
+    rotate: calc(var(--rotate) * var(--i));
+    
+    text-align: right;
+    text-align: center;
+    align-content: center;
+    display: none;
+}
+.images .item img{
+    width: 12vw;
+    height: 12vw;
+}
+.images .item.active {
+    display: block;
+    animation: showImage 0.5s ease-in-out 1 forwards;
 }
 
-.text h3, p{
-    margin: 0;
+.content {
+    color: #FFF;
+    position: absolute;
+    top: 32%;
+    left: 0;
+    width: 60%;
+    text-align: justify;
+    border-top-color: aliceblue;
+    border-bottom-color: aliceblue;
+    border-top-style: dashed;
+    border-bottom-style: dashed;
+}
+.content h1 {
+    color: #FFF;
+    padding: 0;
+    padding-top: 2%;
+    margin-left: 2%;
+}
+.content .des {
+    margin-left: 5%;    
+}
+.content .item {
+    display: none;
+}
+.content .item.active {
+    display: block;
 }
 
 .button-bar {
     width: 100%;
-    margin-top: 7%;
-    display: flex;
-    justify-content: flex-end;
+    margin-top: 6%;
+    margin-left: 2%;
+    margin-bottom: 6%;
 }
 
 .button-bar button{
@@ -129,10 +152,65 @@ p {
     border-style: none;
     font-size: 1.5em;
     font-family: "Mukta Mahee", sans-serif;
-    width: 50%;
+    width: 40%;
     background-color: #CDE7A0;
 }
 
 .button-bar button:hover{
     background-color: #adc387;
+}
+
+@keyframes showOptions {
+    from{
+        opacity: 0;
+        transform: translateY(100px);
+    }to{
+        opacity: 1;
+    }
+}
+@keyframes showImage {
+    from{
+        opacity: 0;
+    }to{
+        opacity: 1;
+    }    
+}
+
+.content .item.item.active h2 {
+    opacity: 0;
+    animation: showOptions 0.3s ease-in-out 1 forwards;
+}
+.content .item.item.active .des {
+    opacity: 0;
+    animation: showOptions 0.3s 0.2s ease-in-out 1 forwards;
+}
+.content .item.item.active .button-bar {
+    opacity: 0;
+    animation: showOptions 0.3s 0.4s ease-in-out 1 forwards;
+}
+
+
+#prev, #next {
+    position: absolute;
+    border: none;
+    top: 2%;
+    right: 5%;
+    height: 0;
+    right: 250px;
+    font-size: 100px;
+    color: #000;
+    font-weight: bold;
+    font-family: cursive;
+    border-color: transparent;
+    opacity: 0.5;
+}
+#next {
+    top: 94%;
+}
+#prev:hover, #next:hover {
+    opacity: 1;
+}
+#prev img, #next img {
+    width: 4vh;
+    height: 4vh;
 }
