--- a/ALLProject/static/css/manager/navigation.css
+++ b/ALLProject/static/css/manager/navigation.css
@@ -14,13 +14,14 @@ body html {
     height: 20em;
     top: 30%;
     left: 1%;
-    z-index: 1;
+    z-index: 2;
 
     border-radius: 30px;
-    background-color: #CBD4C2;
+    background-color: #B3BFB4;
 }
 
 .nav {
+    text-decoration: none;
     position: relative;
     width: 2em;
     height: 2em;
@@ -28,25 +29,19 @@ body html {
     left: -3.9em;
 }
 
-.logo {
+.nav-logo {
     width: 2em;
     height: 2em;
     filter: drop-shadow(4em 0 0px #FFFFFF);
 }
 
-p {
-    margin: 0;
-    top: -1.5em;
-    left: 6.5em;
-    position: relative;
-}
-
 .navfull {
     position: relative;
-    padding-left: 6.5em;
     padding-right: 6em;
     padding-bottom: 0.5em;
-    left: 0;
+    margin: 0;
+    top: -1.7em;
+    left: 6.5em;
     visibility: hidden;
 
     font-family: "Mukta Mahee", sans-serif;
@@ -54,23 +49,6 @@ p {
     font-style: normal;
     text-align: left;
     color: #FFFFFF;
-}
-
-/* Change .home for different pages*/
-.logo.home {
-    width: 2.5em;
-    height: 2.5em;
-    filter: drop-shadow(4em 0 0px #523249);
-}
-
-.nav.home {
-    left: -4.2em;
-}
-
-.navfull.home {
-    font-size: large;
-    color: #523249;
-    padding-left: 6.8em;
 }
 
 /* Animations */
@@ -89,8 +67,8 @@ p {
 }
 
 a:hover {
-    .logo{
-        filter: drop-shadow(4em 0 0px #e0ffab);
+    .nav-logo{
+        filter: drop-shadow(4em 0 0px #815355);
     }
     .navfull {
         color: #000;
