Added nothing messages

--- a/ALLProject/inventory/templates/partials/product_list_partial.html
+++ b/ALLProject/inventory/templates/partials/product_list_partial.html
@@ -1,25 +1,31 @@
 {% load static %}
 
-{% for product in products%}
-    <div class="product" onclick="show_product({{product.id}})">
-        {%if product.quantity == 0 %}
-            <div class="stock-alert">
-                <img src="{% static 'inventory/exclamation.png'%}"></img>
+{%if products %}
+    <div class="list-body">
+        {% for product in products%}
+            <div class="product" onclick="show_product({{product.id}})">
+                {%if product.quantity == 0 %}
+                    <div class="stock-alert">
+                        <img src="{% static 'inventory/exclamation.png'%}"></img>
+                    </div>
+                {%elif product.quantity <= 5%}
+                    <div class="stock-alert">
+                        <img src="{% static 'inventory/exclamation-yellow2.png'%}"></img>
+                    </div>
+                {%endif%}
+                <div class="top-section" style="background-image: url('{{product.image.url}}')">
+                    <div class="product-stock">
+                        <p>Stock: {{product.quantity}}</p>
+                    </div>
+                </div>
+                
+                <div class="product-name">
+                    <h3>{{product.name}}</h3>
+                    <p>RM {{product.price| floatformat:2}}</p>
+                </div>
             </div>
-        {%elif product.quantity <= 5%}
-            <div class="stock-alert">
-                <img src="{% static 'inventory/exclamation-yellow2.png'%}"></img>
-            </div>
-        {%endif%}
-        <div class="top-section" style="background-image: url('{{product.image.url}}')">
-            <div class="product-stock">
-                <p>Stock: {{product.quantity}}</p>
-            </div>
-        </div>
-        {% comment %} <a class="fill-div" href="?add={{product.id}}"></a> {% endcomment %}
-        <div class="product-name">
-            <h3>{{product.name}}</h3>
-            <p>RM {{product.price| floatformat:2}}</p>
-        </div>
+        {% endfor%}
     </div>
-{% endfor%}
+{%else%}
+    <div class="nothing-message"><h3>No products found</h3></div>
+{%endif%}
