--- a/ALLProject/inventory/static/inventory/product_list.css
+++ b/ALLProject/inventory/static/inventory/product_list.css
@@ -165,11 +165,12 @@ a.fill-div {
 }
 
 #add-product {
-  position: sticky;
-  bottom: 10;
-  margin: 20px auto;
+  position: fixed;
+  bottom: 4%;
+  left: 32%;
   display: flex;
   justify-content: center;
+  height: fit-content;
 }
 
 #add-product button {
@@ -452,15 +453,6 @@ form {
   background: #bdcaa6; 
 }
 
-/* #delete-button {
-  background: #E8656A;
-  color: white;
-}
-
-#delete-button:hover {
-  background: #c7575b; 
-} */
-
 .stock-alert {
   z-index: 1;
   position: relative;
@@ -471,4 +463,16 @@ form {
 
 .stock-alert img{
   width: 2vw;
+}
+
+.nothing-message {
+  width: 100%;
+  height: 84vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nothing-message h3 {
+  color: gray;
 }
