--- a/ALLProject/inventory/templates/partials/category_form.html
+++ b/ALLProject/inventory/templates/partials/category_form.html
@@ -8,7 +8,7 @@
         </div>
 
         <div id="button-container">
-            <button type="submit">{{action}} Category</button>
+            <button type="submit">{{action}}</button>
         </div>
     </form>
 </div>
