--- a/ALLProject/pos/static/css/view_history.css
+++ b/ALLProject/pos/static/css/view_history.css
@@ -433,3 +433,16 @@ button.filter-payment:hover {
 .included.value, .final.value {
     text-align: right;
 }
+
+.nothing-message {
+  width: 100%;
+  height: 84vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nothing-message h3 {
+  color: rgb(79, 79, 79);
+  font-size: 1.5vw;
+}
